fix search on mobile

--- a/src/components/Form/form.scss
+++ b/src/components/Form/form.scss
@@ -3,9 +3,9 @@
 .search-form {
 	display: flex;
 	z-index: 1;
-	margin-left: auto;
 
 	&__input {
+		color: $white;
 		margin-right: 5px;
 		border: 2px solid $gray;
 		border-radius: 5px;
