--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,9 +12,10 @@ body {
 	font-family: 'Open Sans', sans-serif;
 
 	header {
+		display: flex;
 		width: 100%;
 		min-height: 50px;
-		display: flex;
+		flex-wrap: wrap;
 		justify-content: space-between;
 		align-items: center;
 	}
